signup form comleted

--- a/index.html
+++ b/index.html
@@ -11,24 +11,61 @@
 </head>
 <body>
     <section id="land-page">
-        <div class="container">
-            <div class="row  text-center mx-0">
-                <div class="col-lg-6 col-md-6 ">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-lg-6 text-center pad">
                     <img src="images/landing-page-logo.png" class="img-fluid logo-image" alt="logo">
                 </div>
-                <div class="col-lg-6 col-md-6 form">
-                    <p class="text-center">WELCOME BUDDY</p>
-                    <form class="login-form">
+                <div class="col-lg-6 form pad">
+                    <div>
+                        <p class="text-center text-center">WELCOME BUDDY</p>
+                    </div>
+                    <form class="login-form ">
                         <label for="enter your name "> NAME</label><br>
                         <input type="text" class="form-input" placeholder="enter your name"><br><br>
-                        <label for="enter your name "> USERNAME</label><br>
+                        <label for="enter your username "> USERNAME</label><br>
                         <input type="text" class="form-input" placeholder="enter your username"><br><br>
-                        <label for="enter your name "> PASSWORD</label><br>
+                        <label for="enter your password "> PASSWORD</label><br>
                         <input type="text" class="form-input" placeholder="enter your password"><br><br>
 
 
                     </form>
-
+                    <form class="signup-form">
+                        <div class="row">
+                            <div class="col-lg-6">
+                            <label for="name">Name</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your name"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">Last Name</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your  last name"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">Email id</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your email id"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">Phone</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your phone number"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">College</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your college name"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">username</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="create your username"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">Password</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="create your password"><br><br>
+                            </div>
+                            <div class="col-lg-6">
+                            <label for="name">Confirm Password</label><br>
+                            <input type="text" class="sign form-input" id="signup-input" placeholder="re-enter your password "><br><br>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
