--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bookbaddies</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
@@ -40,15 +41,18 @@
                         <div class="row  d-flex ">
                             <div class="col-lg-10 col-md-10 offset-lg-2 offset-md-2">
                             <label for="name">Name</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your name"><br><br>
+                            <input type="password" class="sign form-input" placeholder="enter your name"><br><br>
                             </div>
                             <div class="col-lg-10 col-md-10 offset-lg-2 offset-md-2">
-                            <label for="name">Last Name</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your  last name"><br><br>
+                            <label for="name">Username</label><br>
+                            <input type="password" class="sign form-input"  placeholder="enter your  username"><br><br>
                             </div>
                             <div class="col-lg-10 col-md-10 offset-lg-2 offset-md-2 ">
-                            <label for="name">Email id</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your email id"><br><br>
+                            <label for="name">Password</label><br>
+                            <input type="password" class="sign form-input" id="password" placeholder="enter your password"><br><br>
+                            <!-- <span><i class="fa-solid fa-eye-slash eye " onmouseup="repassword()" id="eye-2"></i></span> -->
+                            <span><i class="fa-solid fa-eye eye " id="togglePassword" onmousedown="password()" ></i></span>
+
                             </div>
                             
                         </div>
@@ -61,35 +65,35 @@
                         <div class="row  d-flex ">
                             <div class="col-lg-6 col-md-5 offset-md-1 offset-lg-0">
                             <label for="name">Name</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your name"><br><br>
+                            <input type="text" class="sign form-input" placeholder="enter your name"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5">
                             <label for="name">Last Name</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your  last name"><br><br>
+                            <input type="text" class="sign form-input" placeholder="enter your  last name"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5 offset-md-1 offset-lg-0">
                             <label for="name">Email id</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your email id"><br><br>
+                            <input type="email" class="sign form-input"  placeholder="enter your email id"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5">
                             <label for="name">Phone</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your phone number"><br><br>
+                            <input type="tel" class="sign form-input"  placeholder="enter your phone number"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5 offset-md-1 offset-lg-0">
                             <label for="name">College</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="enter your college name"><br><br>
+                            <input type="text" class="sign form-input"  placeholder="enter your college name"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5">
                             <label for="name">username</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="create your username"><br><br>
+                            <input type="text" class="sign form-input"  placeholder="create your username"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5 offset-md-1 offset-lg-0">
                             <label for="name">Password</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="create your password"><br><br>
+                            <input type="password" class="sign form-input"  placeholder="create your password"><br><br>
                             </div>
                             <div class="col-lg-6 col-md-5">
                             <label for="name">Confirm Password</label><br>
-                            <input type="text" class="sign form-input" id="signup-input" placeholder="re-enter your password "><br><br>
+                            <input type="password" class="sign form-input"  placeholder="re-enter your password "><br><br>
                             </div>
                         </div>
                             <div class="col-lg-10 col-md-10 offset-md-2">
