--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                         <div class="row  d-flex ">
                             <div class="col-lg-10 col-md-10 offset-lg-2 offset-md-2">
                             <label for="name">Name</label><br>
-                            <input type="password" class="sign form-input" placeholder="enter your name"><br><br>
+                            <input type="text" class="sign form-input" placeholder="enter your name"><br><br>
                             </div>
                             <div class="col-lg-10 col-md-10 offset-lg-2 offset-md-2">
                             <label for="name">Username</label><br>
-                            <input type="password" class="sign form-input"  placeholder="enter your  username"><br><br>
+                            <input type="text" class="sign form-input"  placeholder="enter your  username"><br><br>
                             </div>
                             <div class="col-lg-10 col-md-10 offset-lg-2 offset-md-2 ">
                             <label for="name">Password</label><br>
-                            <input type="password" class="sign form-input" id="password" placeholder="enter your password"><br><br>
-                            <!-- <span><i class="fa-solid fa-eye-slash eye " onmouseup="repassword()" id="eye-2"></i></span> -->
-                            <span><i class="fa-solid fa-eye eye " id="togglePassword" onmousedown="password()" ></i></span>
+                            <input type="password" class="sign form-input" id="password" placeholder="enter your password">
+                            <span><i class="fa-solid fa-eye-slash eye " onmouseup="password()" id="eye-2"></i></span>
+                            <span><i class="fa-solid fa-eye eye " id="eye-1" onmousedown="password()" ></i></span><br><br>
 
                             </div>
                             
@@ -89,11 +89,15 @@
                             </div>
                             <div class="col-lg-6 col-md-5 offset-md-1 offset-lg-0">
                             <label for="name">Password</label><br>
-                            <input type="password" class="sign form-input"  placeholder="create your password"><br><br>
+                            <input type="password" class="sign form-input"  placeholder="create your password">
+                            <span><i class="fa-solid fa-eye-slash eye eye-e" onmouseup="password()" id="eye-2"></i></span>
+                            <span><i class="fa-solid fa-eye eye eye-e " id="eye-1" onmousedown="password()" ></i></span>
                             </div>
                             <div class="col-lg-6 col-md-5">
                             <label for="name">Confirm Password</label><br>
-                            <input type="password" class="sign form-input"  placeholder="re-enter your password "><br><br>
+                            <input type="password" class="sign form-input"  placeholder="re-enter your password ">
+                            <span><i class="fa-solid fa-eye-slash eye eye-e" onmouseup="password()" id="eye-2"></i></span>
+                            <span><i class="fa-solid fa-eye eye eye-e" id="eye-1" onmousedown="password()" ></i></span>
                             </div>
                         </div>
                             <div class="col-lg-10 col-md-10 offset-md-2">
