--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <div id="frist-form" >
                     
                         <div class=" form-f d-flex flex-column align-items-center justify-content-center">
-                            <p class="text-center start-form ">WELCOME BUDDY</p>
-                            <p class="text-center start-form fs-4 p-0 fw-semibold">Authentication required</p>
-                            <p class="text-center start-form fs-5 pt-2 pb-4 fw-semibold">Please log in to access this page</p>
+                            <p class="text-center start-form fs-2 fw-bold">WELCOME BUDDY</p>
+                            <p class="text-center start-form fs-4 p-0 m-0 fw-semibold">Authentication required</p>
+                            <p class="text-center start-form fs-5 pt-1 pb-4 fw-semibold">Please log in to access this page</p>
                             <div class="start-form ">
                                 <button onclick="showform()" class="btn-1">Log-IN</button>
                                 <button onclick="signup()" class="btn-1">Sign-UP</button>
@@ -90,15 +90,16 @@
                             <div class="col-lg-6 col-md-5 offset-md-1 offset-lg-0">
                             <label for="name">Password</label><br>
                             <input type="password" class="sign form-input"  placeholder="create your password">
-                            <span><i class="fa-solid fa-eye-slash eye eye-e" onmouseup="password()" id="eye-2"></i></span>
-                            <span><i class="fa-solid fa-eye eye eye-e " id="eye-1" onmousedown="password()" ></i></span>
+                            <span><i class="fa-solid fa-eye-slash  eye-f" onmouseup="password()" id="eye-2"></i></span>
+                            <span><i class="fa-solid fa-eye  eye-f " id="eye-1" onmousedown="password()" ></i></span>
                             </div>
                             <div class="col-lg-6 col-md-5">
                             <label for="name">Confirm Password</label><br>
                             <input type="password" class="sign form-input"  placeholder="re-enter your password ">
-                            <span><i class="fa-solid fa-eye-slash eye eye-e" onmouseup="password()" id="eye-2"></i></span>
-                            <span><i class="fa-solid fa-eye eye eye-e" id="eye-1" onmousedown="password()" ></i></span>
+                            <span><i class="fa-solid fa-eye-slash  eye-e" onmouseup="password()" id="eye-2"></i></span>
+                            <span><i class="fa-solid fa-eye  eye-e" id="eye-1" onmousedown="password()" ></i></span><br><br>
                             </div>
+                           
                         </div>
                             <div class="col-lg-10 col-md-10 offset-md-2">
                                 <input type="submit" value="Sign UP"  class="submit" id="submit">
