--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <div class="d-flex align-items-center justify-content-center" style="height: 100vh;">
                 <div class="width">
                     <div style="text-align: center;">
-                        <img src="images/book.png" class="img-fluid " alt="...">
+                        <img src="images/book.png" class="img-fluid " alt="logo image">
                     </div> 
                     <form class="login-form" onsubmit="login()">
                         <div class="borders">
