--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <p class="text-center start-form fs-4 p-0 m-0 fw-semibold">Authentication required</p>
                             <p class="text-center start-form fs-5 pt-1 pb-4 fw-semibold">Please log in to access this page</p>
                             <div class="start-form ">
-                                <button onclick="login()" class="btn-1">Log-IN</button>
+                                <button  class="btn-1"><a href="login.html"> Log-IN</a></button>
                                 <button onclick="signup()" class="btn-1">Sign-UP</button>
                             </div>
                         </div>
