--- a/signup.html
+++ b/signup.html
@@ -18,29 +18,41 @@
                     <div style="text-align: center;">
                         <img src="images/book.png" class="img-fluid " alt="...">
                     </div> 
-                    <form class="signup-form" onsubmit="login()">
+                    <form class="signup-form" onsubmit="return validate()">
                         <div class="borders">
                             <p class="head">signup</p>
                              <label for="name">Name</label><br>
-                             <input type="text" class="sign form-input" placeholder="enter your name"><br><br>
+                             <input type="text" class="sign form-input" id="name" placeholder="enter your name">
+                             <p class="text-danger" id="names"></p>
+
 
                              <label for="name">Email id</label><br>
-                             <input type="email" class="sign form-input"  placeholder="enter your email id"><br><br>
+                             <input type="text" class="sign form-input" id="email" placeholder="enter your email id">
+                             <p class="text-danger" id="email-id"></p>
+
 
                              <label for="name">username</label><br>
-                             <input type="text" class="sign form-input"  placeholder="create your username"><br><br>
+                             <input type="text" class="sign form-input" id="username" placeholder="create your username">
+                             <p class="text-danger" id="user"></p>
+
 
                              <label for="name">Password</label><br>
-                             <input type="password" class="sign form-input"  placeholder="create your password"><br><br>
+                             <input type="password" class="sign form-input" id="password1" placeholder="create your password">
                              <span><i class="fa-solid fa-eye-slash  eye-f" onmouseup="password2()" id="eye-2"></i></span>
                              <span><i class="fa-solid fa-eye  eye-f " id="eye-1" onmousedown="password2()" ></i></span>
+                             <p class="text-danger" id="pass1"></p>
+
 
                              <label for="name">Confirm Password</label><br>
-                             <input type="password" class="sign form-input"  placeholder="re-enter your password ">
+                             <input type="password" class="sign form-input" id="password2" placeholder="re-enter your password ">
                              <span><i class="fa-solid fa-eye-slash  eye-e" onmouseup="password2()" id="eye-2"></i></span>
-                             <span><i class="fa-solid fa-eye  eye-e" id="eye-1" onmousedown="password2()" ></i></span><br><br>
+                             <span><i class="fa-solid fa-eye  eye-e" id="eye-1" onmousedown="password2()" ></i></span>
+                             <p class="text-danger fw-bold" id="pass2"></p>
+                             
 
                                  <input type="submit" value="Sign UP"  class="submit" id="submit">
+                             <p class="text-center m-0">Alredy have a account ? <a href="login.html">Login</a></p>
+
                         </div>
                     </form>
                 </div>
