signup validation completed

--- a/signup.html
+++ b/signup.html
@@ -23,31 +23,31 @@
                             <p class="head">signup</p>
                              <label for="name">Name</label><br>
                              <input type="text" class="sign form-input" id="name" placeholder="enter your name">
-                             <p class="text-danger" id="names"></p>
+                             <p class="text-danger fw-semibold" id="names"></p>
 
 
                              <label for="name">Email id</label><br>
                              <input type="text" class="sign form-input" id="email" placeholder="enter your email id">
-                             <p class="text-danger" id="email-id"></p>
+                             <p class="text-danger fw-semibold" id="email-id"></p>
 
 
                              <label for="name">username</label><br>
                              <input type="text" class="sign form-input" id="username" placeholder="create your username">
-                             <p class="text-danger" id="user"></p>
+                             <p class="text-danger fw-semibold" id="user"></p>
 
 
                              <label for="name">Password</label><br>
                              <input type="password" class="sign form-input" id="password1" placeholder="create your password">
-                             <span><i class="fa-solid fa-eye-slash  eye-f" onmouseup="password2()" id="eye-2"></i></span>
-                             <span><i class="fa-solid fa-eye  eye-f " id="eye-1" onmousedown="password2()" ></i></span>
-                             <p class="text-danger" id="pass1"></p>
+                             <span><i class="fa-solid fa-eye-slash  eye-f" onclick="password2()" id="eye-2"></i></span>
+                             <span><i class="fa-solid fa-eye  eye-f " id="eye-1" onclick="password2()" ></i></span>
+                             <p class="text-danger fw-semibold" id="pass1"></p>
 
 
                              <label for="name">Confirm Password</label><br>
                              <input type="password" class="sign form-input" id="password2" placeholder="re-enter your password ">
-                             <span><i class="fa-solid fa-eye-slash  eye-e" onmouseup="password2()" id="eye-2"></i></span>
-                             <span><i class="fa-solid fa-eye  eye-e" id="eye-1" onmousedown="password2()" ></i></span>
-                             <p class="text-danger fw-bold" id="pass2"></p>
+                             <span><i class="fa-solid fa-eye-slash  eye-e" onclick="password2()" id="eye-3"></i></span>
+                             <span><i class="fa-solid fa-eye  eye-e" id="eye-4" onclick="password2()" ></i></span>
+                             <p class="text-danger  fw-semibold" id="pass2"></p>
                              
 
                                  <input type="submit" value="Sign UP"  class="submit" id="submit">
