--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
 
                              <label for="name">Password</label><br>
                              <input type="password" class="log form-input"  placeholder="create your password"><br><br>
-                             <span><i class="fa-solid fa-eye-slash  eye-f" onmouseup="password()" id="eye-2"></i></span>
-                             <span><i class="fa-solid fa-eye  eye-f " id="eye-1" onmousedown="password()" ></i></span>
+                             <span><i class="fa-solid fa-eye-slash  eye-d" onmouseup="password()" id="eye-2"></i></span>
+                             <span><i class="fa-solid fa-eye  eye-d " id="eye-1" onmousedown="password()" ></i></span>
                                  <input type="submit" value="login"  class="submit" id="submit">
                              <p class="text-center">Don't have a account ? <a href="signup.html">Sign up</a></p>
 
