--- a/admin dashboard/book-issue.html
+++ b/admin dashboard/book-issue.html
@@ -160,8 +160,24 @@
                 </div>
             </li>
             <!-- end of collabse -->
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Interface
+            </div>
+            <li class="nav-item active">
+                <a class="nav-link" href="login.datatable.html">
+                    <i class="fa-solid fa-database"></i>
+                    <span>user database</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/index.html">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    <span>Logout</span></a>
+            </li>
         </ul>
-        </ul>
+        
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
@@ -439,7 +455,7 @@
       <!-- Page level custom scripts -->
       <!-- <script src="js/demo/datatables-demo.js"></script> -->
 
-   -->
+
 </body>
 
 </html>
