--- a/admin-dashboard/inventry.html
+++ b/admin-dashboard/inventry.html
@@ -297,7 +297,7 @@
                         <div class="modal-dialog  modal-dialog-centered">
                           <div class="modal-content">
                                 <div class="modal-header">
-                                  <h1 class="modal-title fs-5" id="exampleModalLabel">Student Detail</h1>
+                                  <h1 class="modal-title fs-5" id="exampleModalLabel">Book Inventory</h1>
                                 
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
@@ -329,10 +329,15 @@
                                           <label for="details" class="label-i">Published year</label>
                                           <input type="text" class="modal-input" placeholder="Enter the student address">
                                           </div>
-                                          <div class="col-lg-12 py-2">
+                                          <div class="col-lg-6 py-2">
+                                            <label for="details" class="label-i">stock</label>
+                                            <input type="number" class="modal-input" placeholder="Enter the quantity of the book">
+                                            </div>
+                                          <div class="col-lg-6 py-2">
                                             <label for="details" class="label-i">PDF</label>
                                             <input type="file" class="modal-input" placeholder="Enter the student address">
                                             </div>
+                                           
                                           <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                             <input type="submit" value="Add" class="btn-color sub" >
