--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                     <div style="text-align: center;">
                         <img src="images/book.png" class="img-fluid " alt="logo image">
                     </div> 
-                    <form class="login-form "  >
+                    <form class="login-form " onsubmit=" admin() ; return false" >
                         <div class="borders">
                             <p class="head">login</p>
 
@@ -29,7 +29,7 @@
                              <input type="password" class="log form-input" id="password-1"  placeholder="create your password"><br><br>
                              <span><i class="fa-solid fa-eye-slash  eye-d" onmouseup="password()" id="eye-2"></i></span>
                              <span><i class="fa-solid fa-eye  eye-d " id="eye-1" onmousedown="password()" ></i></span>
-                                 <input type="submit" value="login"  class="submit" id="submit" onclick="return admin()">
+                                 <input type="submit" value="login"  class="submit" id="submit">
                              <p class="text-center">Don't have a account ? <a href="signup.html">Sign up</a></p>
 
                         </div>
