--- a/admin-dashboard/inventry.html
+++ b/admin-dashboard/inventry.html
@@ -44,9 +44,9 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="book-issue.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <i class="fa-solid fa-user"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Ansari Avez</div>
             </a>
 
             <!-- Divider -->
@@ -57,12 +57,12 @@
                 Intventory
             </div>
            
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="book-issue.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Book issued</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="inventry.html">
                     <i class="fa-solid fa-warehouse"></i>
                     <span>Book Inventry</span></a>
@@ -78,9 +78,9 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne"
+                <a class="nav-link collapsed bld" href="#" data-toggle="collapse" data-target="#collapseOne"
                     aria-expanded="true" aria-controls="collapseOne">
-                    <i class="fa-solid fa-book-open-reader"></i>
+                    <i class="fa-solid fa-book-open-reader text-light"></i>
                     <span>BSC-IT</span>
                 </a>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -116,49 +116,48 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="cards.html">subject 1</a>
-                        <a class="collapse-item" href="cards.html">subject 2</a>
+                        <a class="collapse-item" href="sem1.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem1.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="cards.html">subject 1</a>
-                        <a class="collapse-item" href="cards.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="cards.html">subject 1</a>
-                        <a class="collapse-item" href="cards.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="cards.html">subject 1</a>
-                        <a class="collapse-item" href="cards.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="cards.html">subject 1</a>
-                        <a class="collapse-item" href="cards.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseSeven" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="cards.html">subject 1</a>
-                        <a class="collapse-item" href="cards.html">subject 2</a>
-
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
                     </div>
                 </div>
             </li>
@@ -169,12 +168,12 @@
             <div class="sidebar-heading">
                 Interface
             </div>
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="login.datatable.html">
                     <i class="fa-solid fa-database"></i>
                     <span>user database</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="/index.html">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span>Logout</span></a>
@@ -373,13 +372,14 @@
                         <table class="datatables" id="datatables">
                             <thead>
                                 <th class="t-head" style="width:3% ;">ID</th>
-                                <th class="t-head" style="width:18% ;">Book Name</th>
-                                <th class="t-head" style="width:15% ;">Book ID</th>
-                                <th class="t-head" style="width: 19%;">Author Name</th>
+                                <th class="t-head" style="width:17% ;">Book Name</th>
+                                <th class="t-head" style="width:14% ;">Book ID</th>
+                                <th class="t-head" style="width: 17%;">Author Name</th>
                                 <th class="t-head" style="width: 12%;">Strem</th>
-                                <th class="t-head" style="width: 16%;">Subject</th>
+                                <th class="t-head" style="width: 14%;">Subject</th>
                                 <th class="t-head" style="width: 12%;">Published year</th>
-                                <th class="t-head" style="width: 5%;">PDF</th>
+                                <th class="t-head" style="width: 5%;">Stock</th>
+                                <th class="t-head" style="width: 6%;">PDF</th>
 
                                
                             </thead>
@@ -459,7 +459,7 @@
       <!-- Page level custom scripts -->
       <!-- <script src="js/demo/datatables-demo.js"></script> -->
 
-   -->
+
 </body>
 
 </html>
