--- a/admin-dashboard/sem2.subject1.html
+++ b/admin-dashboard/sem2.subject1.html
@@ -44,9 +44,9 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="book-issue.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <i class="fa-solid fa-user"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Ansari Avez</div>
             </a>
 
             <!-- Divider -->
@@ -57,12 +57,12 @@
                 Intventory
             </div>
            
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="book-issue.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Book issued</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="inventry.html">
                     <i class="fa-solid fa-warehouse"></i>
                     <span>Book Inventry</span></a>
@@ -78,9 +78,9 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne"
+                <a class="nav-link collapsed bld" href="#" data-toggle="collapse" data-target="#collapseOne"
                     aria-expanded="true" aria-controls="collapseOne">
-                    <i class="fa-solid fa-book-open-reader"></i>
+                    <i class="fa-solid fa-book-open-reader text-light"></i>
                     <span>BSC-IT</span>
                 </a>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -132,33 +132,32 @@
                 <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="sem3.subject1.html">subject 1</a>
-                        <a class="collapse-item" href="sem3.subject2.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="sem4.subject1.html">subject 1</a>
-                        <a class="collapse-item" href="sem4.subject2.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="sem5.subject1.html">subject 1</a>
-                        <a class="collapse-item" href="sem5.subject2.html">subject 2</a>
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
 
                     </div>
                 </div>
                 <div id="collapseSeven" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Subjects:</h6>
-                        <a class="collapse-item" href="sem6.subject1.html">subject 1</a>
-                        <a class="collapse-item" href="sem6.subject2.html">subject 2</a>
-
+                        <a class="collapse-item" href="sem2.subject1.html">subject 1</a>
+                        <a class="collapse-item" href="sem2.subject2.html">subject 2</a>
                     </div>
                 </div>
             </li>
@@ -169,12 +168,12 @@
             <div class="sidebar-heading">
                 Interface
             </div>
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="login.datatable.html">
                     <i class="fa-solid fa-database"></i>
                     <span>user database</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active bld">
                 <a class="nav-link" href="/index.html">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span>Logout</span></a>
