--- a/admin-dashboard/sem1.subject2.html
+++ b/admin-dashboard/sem1.subject2.html
@@ -301,7 +301,7 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                        <form action="" class="modal-form">
+                                        <form action="" class="modal-form" onsubmit="Video() && Pdf() ; return false">
                                         <div class="row">
                                             <div class="col-lg-6 py-2">
                                                 <label for="details" class="label-i"> video title</label>
