--- a/admin-dashboard/book-issue.html
+++ b/admin-dashboard/book-issue.html
@@ -168,7 +168,7 @@
             <div class="sidebar-heading">
                 Interface
             </div>
-            <li class="nav-item active bld">
+            <li class="nav-item active bld admin">
                 <a class="nav-link" href="login.datatable.html">
                     <i class="fa-solid fa-database"></i>
                     <span>user database</span></a>
@@ -286,7 +286,7 @@
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800 fw-bold">Book issued details </h1>
                          
-                           <button class="d-none d-sm-inline-block btn btn-sm btn-color shadow-sm fs-6" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-regular fa-square-plus pe-2 btn-color">
+                           <button class="d-none d-sm-inline-block btn btn-sm btn-color shadow-sm fs-6 admin" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-regular fa-square-plus pe-2 btn-color">
                            </i>  Add student</button></a>
                            <!-- Button trigger modal -->
 
